# collaborative-docs

./: .gitignore  API_DOCUMENTATION.md  DATABASE_TROUBLESHOOTING.md  DEPLOYMENT.md  DEPLOYMENT_PRODUCTION.md  PORT_CONFIGURATION.md  README.md  collaborative-docs.service  env.example  install-service.sh
backend/: .gitignore  ADMIN_GUIDE.md  AUTHENTICATION.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  setup-production-env.sh  setup.sh  test_simple.rs
backend/.sqlx/: query-15456344ec312c3420ec175f263e2201a39cc0a059ee590cd3838314ef4387cf.json  query-8727843e2481f64f24e68b1bc18e34d7c2cdd6d38568627c43dee451facaa968.json  query-90c51579a6de8f075d5030df1ddf71446ded00eb70732a3f1ed1a7c7a81f6996.json  query-bb6c999a32cb9ad8320fb70c4c045c0f15b118d85389043bf871b22ec37cc6bb.json  query-d977d1698a579f51539e76a7c758734197f034ba8b9bc43acbd39d75d6868714.json  query-dfd5c9abac3be0011f6aed0dedb6b6aa70ebaf456a619f4f0536e1d6074e2f1c.json
backend/config/: example.default.toml  example.development.toml  example.production.toml
backend/migrations/: 20240101000000_create_documents_table.sql  20240102000000_create_users_and_roles.sql
backend/scripts/: create_admin.rs
backend/src/: app.rs  auth.rs  config.rs  crdt.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  openapi.rs  tests.rs  utils.rs  websocket.rs
backend/tests/: auth_test.rs  integration_test.rs
frontend/: index.html  package.json  pnpm-lock.yaml  setup-env.sh  vite.config.ts
frontend/src/: App.test.tsx  (+2 more)
integration/: jest.config.js  package.json  pnpm-lock.yaml
scripts/: setup-database.sh
(+15 files in other folders)
