[package]
name = "collaborative-docs-rs"
version = "0.1.0"
edition = "2024"
authors = ["Riyad Shauk <riyad@islahlabs.com>"]
description = "A collaborative document editing API"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = "0.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.13"
futures-util = "0.3.31"
ipnetwork = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "ipnetwork"] }
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
yrs = "0.24.0"

[dev-dependencies]
axum-test = "17.3.0"
tokio-test = "0.4.4"
